--- a/compose-dev.yml
+++ b/compose-dev.yml
@@ -1,10 +1,15 @@
 services:
   app:
-    build: .
+    image: ghcr.io/lakr233/creemproxy:main
     ports:
       - "8443:8443"
-    env_file:
-      - .env
+    environment:
+      - CREEM_API_KEY="" # remember to replace with your API key
     volumes:
       - ./data:/app/data
-
+    restart: always
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "128m"
+        max-file: "5"
