--- a/compose.yml
+++ b/compose.yml
@@ -1,11 +1,14 @@
 services:
   app:
-    image: ghcr.io/Lakr233/CreemProxy:latest
+    image: ghcr.io/lakr233/creemproxy:main
     ports:
       - "8443:8443"
     environment:
-      # see README for other environment variables
-      - CREEM_API_KEY=""
+      - CREEM_API_KEY="" # remember to replace with your API key
     volumes:
       - ./data:/app/data
-
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "128m"
+        max-file: "5"
